--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Old Page</title>
      <meta charset="UTF-8" />
-     <meta http-equiv="refresh" content="1; URL=https://acrobat.adobe.com/id/urn:aaid:sc:eu:279e51ec-cb1c-4dc7-9799-9bc7988c7201" />
+     <meta http-equiv="refresh" content="1; URL=https://acrobat.adobe.com/id/urn:aaid:sc:EU:b23cacdf-776c-460c-a22f-6aae4ea07c94" />
    </head>
    <body>
    </body>
